tests/ui/frontmatter/infostring-fail.rs
---cargo,clippy
//~^ ERROR: invalid infostring for frontmatter
---

#![feature(frontmatter)]

fn main() {}
